update to new version 1.1.14

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
+---
 sources:
-  "libXcursor-1.1.13.tar.bz2": 4e461d9e4324689ca8a84706926a8c0fe9470e47
+  libXcursor-1.1.14.tar.bz2: 89870756758439f9216ddf5f2d3dca56570fc6b7
