--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libXcursor-1.2.0.tar.bz2: cca0b34955d3c2f657f05a2a2c40f75353ddd912
+  libXcursor-1.2.1.tar.xz: 92b026efa51b77987dbd527e4fc6ccba26fbe934
